--- a/contact.html
+++ b/contact.html
@@ -74,25 +74,25 @@
 						<div class="col-md-6 col-12 form-input-box">
 							<p>full name:</p>
 							<form>
-								<input type="text" name="" placeholder="Tasnimul Islam Shadi" class="form-input">
+								<input type="text" name="" placeholder="Enter Your Name" class="form-input">
 							</form>
 						</div>
 						<div class="col-md-6 col-12 form-input-box">
 							<p>email address:</p>
 							<form>
-								<input type="email" name="" placeholder="tasnimulislamshadi@gmail.com" class="form-input">
+								<input type="email" name="" placeholder="Enter Email Address" class="form-input">
 							</form>
 						</div>
 						<div class="col-md-6 col-12 form-input-box">
 							<p>subject:</p>
 							<form>
-								<input type="text" name="" placeholder="Hello World" class="form-input">
+								<input type="text" name="" placeholder="Subject" class="form-input">
 							</form>
 						</div>
 						<div class="col-md-6 col-12 form-input-box">
 							<p>message:</p>
 							<form>
-								<input type="text" name="" placeholder="Hello World" class="form-input">
+								<input type="text" name="" placeholder="Your Message" class="form-input">
 							</form>
 						</div>
 					</div>
