--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 							<a href="#">home</a>
 						</li>
 						<li>
-							<a href="#">\</a>
+							<span>\</span>
 						</li>
 						<li>
 							<a href="about.html">about us</a>
 						</li>
 						<li>
-							<a href="#">\</a>
+							<span>\<span>
 						</li>
 						<li>
 							<a href="contact.html">contact</a>
