--- a/contact.html
+++ b/contact.html
@@ -36,13 +36,13 @@
 							<a href="index.html">home</a>
 						</li>
 						<li>
-							<a href="#">\</a>
+							<span>\</span>
 						</li>
 						<li>
 							<a href="about.html">about us</a>
 						</li>
 						<li>
-							<a href="#">\</a>
+							<span>\</span>
 						</li>
 						<li>
 							<a href="#">contact</a>
