--- a/about.html
+++ b/about.html
@@ -35,13 +35,13 @@
 							<a href="index.html">home</a>
 						</li>
 						<li>
-							<a href="#">\</a>
+							<span>\</span>
 						</li>
 						<li>
 							<a href="#">about us</a>
 						</li>
 						<li>
-							<a href="#">\</a>
+							<span>\</span>
 						</li>
 						<li>
 							<a href="contact.html">contact</a>
